plugins {
    id 'java'
    id 'war'
    //id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
}

group 'group3.seng3150'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.security:spring-security-bom:5.3.4.RELEASE'
    }
}

dependencies {
    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
    compile group: 'jstl', name: 'jstl', version: '1.2'
    compile group: 'org.springframework', name: 'spring-web', version: '5.2.6.RELEASE'
    compile group: 'org.springframework', name: 'spring-core', version: '5.2.6.RELEASE'
    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.6.RELEASE'
    compile group: 'org.springframework', name: 'spring-context', version: '5.2.6.RELEASE'

    //Spring security dependencies
    compile "org.springframework.security:spring-security-web"
    compile "org.springframework.security:spring-security-config"

    compile 'org.springframework:spring-jdbc:5.2.8.RELEASE'
    compile 'org.springframework.security:spring-security-taglibs:5.3.4.RELEASE'
    /*
    implementation group:'org.springframework.boot', name:'spring-boot-starter-security', version: '2.3.3.RELEASE'
    implementation group:'org.springframework.security', name:'spring-security-test', version: '5.3.4.RELEASE'
     */
    //Side note, I think we should change the compiles to implementations, as compile is deprecated and implementation is the new normal

//this is previous database stuff
//    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
//    runtime "mysql:mysql-connector-java:8.0.15"

    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.5.Final'


    compile 'javax.xml.bind:jaxb-api:2.3.0'

    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.3.7.Final'
    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'

    // https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api
    providedCompile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'

    testCompile group: 'junit', name: 'junit', version: '4.11'
    testCompile group: 'junit', name: 'junit', version: '4.12'

}

test {
    useJUnitPlatform()
}





